# vcr

./: .gitignore  Dockerfile  LICENSE  README.md  benchmark.sh  docker-bake.hcl  docker-bake.platforms.hcl  package-lock.json  package.json
.github/: README.md
.github/workflows/: build-sample-python.yml  cli.yml  depot.yml  sample-python.yml
cartesi-nbd-server/: Cargo.toml
cartesi-nbd-server/src/: lib.rs
cartesi-nbd-server/tests/: cartesi_machine_test.rs
docs/: README.md  advanced.md  cli-reference.md  dev.md  export.md  perf.md  prod.md  profiles.md  quick-start.md  reference.md  stage.md  troubleshooting.md  workflow.md
plans/: ARCHITECTURE.md  PLAN.md  riscv64-package.md
